--- a/lang/en.json
+++ b/lang/en.json
@@ -74,6 +74,7 @@
     "magic": "Magic",
     "mod": "Drone Mod",
     "perk": "Perk",
+    "psionic": "Psionic Ability",
     "race": "Species",
     "shield": "Shield",
     "spell": "Spell",
