Tuesday Update Psionics Updated

--- a/lang/en.json
+++ b/lang/en.json
@@ -59,29 +59,29 @@
     "actorresource": "Actor Resource",
     "ammunition": "Ammunition",
     "archetypes": "Archetype",
-    "asi": "Ability Score Increase",
-    "augmentation": "Augmentation",
-    "chassis": "Drone Chassis",
-    "class": "Class",
+    "asi": "X (Ability Score Increase)",
+    "augmentation": "Cybertech",
+    "chassis": "X (Drone Chassis)",
+    "class": "X (Class)",
     "consumable": "Consumable",
     "container": "Container",
     "equipment": "Armor",
     "feat": "Feat",
     "flaw": "Flaw",
-    "fusion": "Weapon Fusion",
+    "fusion": "X (Weapon Fusion)",
     "goods": "Goods",
-    "hybrid": "Hybrid",
+    "hybrid": "X (Hybrid)",
     "magic": "Magic",
     "mod": "Drone Mod",
     "perk": "Perk",
     "psionic": "Psionic Ability",
     "race": "Species",
     "shield": "Shield",
-    "spell": "Spell",
+    "spell": "X (Spell)",
     "technological": "Technological",
-    "upgrade": "Armor Upgrade",
+    "upgrade": "X (Armor Upgrade)",
     "weapon": "Weapon",
-    "weaponaccessory": "Weapon Accessory",
+    "weaponaccessory": "X (Weapon Accessory)",
     "weaponAccessory": "Weapon Accessory",
     
     "vehicleattack": "Vehicle Attack",
@@ -106,7 +106,7 @@
     "starshipDefence": "Starship Defence",
     "starshipelectroniccountermeasure": "Starship Electronic Countermeasure",
     "starshipElectronicCountermeasure": "Starship Electronic Countermeasure",
-    "starshipdriftengine": "Starship Drift Engine",
+    "starshipdriftengine": " X (Starship Drift Engine)",
     "starshipexpansionbay": "Starship Expansion Bay",
     "starshipfortifiedhull": "Starship Fortified Hull",
     "starshipframe": "Starship Hull",
@@ -268,7 +268,7 @@
                 "Capacity": "Capacity",
                 "CapacityBulk": "Capacity",
                 "CapacityBulkTooltip": "How much bulk can be contained within this container.",
-                "CapacityLabelBulk": "Bulk",
+                "CapacityLabelBulk": "Mass",
                 "CapacityLabelItems": "Item(s)",
                 "CapacityPropertyItems": "Items",
                 "CapacityPropertyItemsTooltip": "When set to Items, this container will accept up to the amount of items specified in capacity. Items with a quantity higher than 1 will count more towards this limit.",
@@ -296,7 +296,7 @@
                 "StorageSectionsAdd": "Add a new Storage Section",
                 "StorageSectionsRemove": "Delete this Storage Section",
                 "StorageType": "Storage Type",
-                "StorageTypeBulk": "Bulk",
+                "StorageTypeBulk": "Mass",
                 "StorageTypeSlot": "Slot",
                 "StorageTypeTooltip": "This property defines if a storage section measures its contents in bulk or in slots."
             },
@@ -1011,7 +1011,7 @@
     "InvalidStarshipItem": "{name} is an invalid Item for a starship.",
     "Inventory": "Inventory",
     "InventoryAdd": "Add",
-    "InventoryBulk": "Bulk",
+    "InventoryBulk": "Mass",
     "InventoryCapacity": "Capacity",
     "InventoryCurrency": "Currency",
     "InventoryEquipped": "Equipped",
@@ -1075,7 +1075,7 @@
         },
         "Attuned": "Attuned",
         "Augmentation": {
-            "Details": "Augmentation Details",
+            "Details": "Cybertech Details",
             "System": "System",
             "Type": "Type"
         },
@@ -1094,11 +1094,11 @@
             "Armor": "Armor",
             "Ammunition": "Ammunition",
             "ArmorUpgrades": "Armor Upgrades",
-            "Augmentations": "Augmentations",
+            "Augmentations": "Cybertech",
             "Classes": "Classes",
             "Consumables": "Consumables",
             "Containers": "Containers",
-            "DroneChassis": "Drone Chassis",
+            "DroneChassis": "X (Drone Chassis)",
             "DroneMods": "Drone Mods",
             "Equipment": "Equipment",
             "Feats": "Feats",
@@ -1146,7 +1146,7 @@
             "Usage": "Consumable Usage"
         },
         "Description": {
-            "Bulk": "Bulk",
+            "Bulk": "Mass",
             "Hands": "Hands",
             "Level": "Level",
             "Price": "Price",
@@ -3491,7 +3491,7 @@
                 "Capacity": "Capacity",
                 "CapacityBulk": "Capacity",
                 "CapacityBulkTooltip": "How much bulk can be contained within this container.",
-                "CapacityLabelBulk": "Bulk",
+                "CapacityLabelBulk": "Mass",
                 "CapacityLabelItems": "Item(s)",
                 "CapacityPropertyItems": "Items",
                 "CapacityPropertyItemsTooltip": "When set to Items, this container will accept up to the amount of items specified in capacity. Items with a quantity higher than 1 will count more towards this limit.",
@@ -3519,7 +3519,7 @@
                 "StorageSectionsAdd": "Add a new Storage Section",
                 "StorageSectionsRemove": "Delete this Storage Section",
                 "StorageType": "Storage Type",
-                "StorageTypeBulk": "Bulk",
+                "StorageTypeBulk": "Mass",
                 "StorageTypeSlot": "Slot",
                 "StorageTypeTooltip": "This property defines if a storage section measures its contents in bulk or in slots."
             },
