Saturday Update - Apply Pending Damage

--- a/lang/en.json
+++ b/lang/en.json
@@ -63,8 +63,9 @@
     "augmentation": "Cybertech",
     "chassis": "X (Drone Chassis)",
     "class": "X (Class)",
-    "clothing": "Clothing and Equipment",
-    "communications": "Communications",
+    "clothing": "Clothing and Accessories",
+    "communications": "Communication",
+    "computer": "Computer",
     "pharmaceutical": "Pharmaceutical",
     "container": "Container",
     "equipment": "Armor",
@@ -74,11 +75,16 @@
     "goods": "Goods",
     "hybrid": "X (Hybrid)",
     "magic": "Magic",
+    "miscellaneous":"Miscellaneous Gear",
+    "medical":"Medical Gear",
     "mod": "X (Drone Mod)",
     "perk": "Perk",
+    "professional":"Professional Equipment",
     "psionic": "Psionic Ability",
     "race": "Species",
+    "sensor":"Sensors",
     "shield": "Shield",
+    "survival":"Survival Gear",
     "spell": "X (Spell)",
     "technological": "Technological",
     "upgrade": "X (Armor Upgrade)",
@@ -1099,6 +1105,9 @@
             "ArmorUpgrades": "Armor Upgrades",
             "Augmentations": "Cybertech",
             "Classes": "Classes",
+            "Clothing": "Clothing and Accessories",
+            "Communication":"Communications",
+            "Computer":"Computers",
             "Consumables": "Consumables",
             "Containers": "Containers",
             "DroneChassis": "X (Drone Chassis)",
@@ -1108,10 +1117,16 @@
             "Goods": "Goods",
             "HybridItems": "Hybrid Items",
             "MagicItems": "Magic Items",
+            "Medical":"Medical Gear",
+            "Miscellaneous": "Miscellaneous Gear",
             "MiscellaneousItems": "Miscellaneous Items",
+            "Pharmaceutical":"Pharmaceuticals",
+            "Professional":"Professional Equipment",
             "Races": "Races",
+            "Sensor":"Sensors",
             "Shields": "Shields",
             "Spells": "Spells",
+            "Survival":"Survival Gear",
             "StarshipAblativeArmors": "Starship Ablative Armors",
             "StarshipArmors": "Starship Armors",
             "StarshipComputers": "Starship Computers",
