--- a/lang/en.json
+++ b/lang/en.json
@@ -2,6 +2,8 @@
 
 "pisto":"Modern Ranged Weapon - Pistol",
 
+
+
   "SETTINGS":{
     "SimpleMacroShorthandN": "Shortened Macro Syntax",
   "SimpleMacroShorthandL": "Enable a shortened macro syntax which allows referencing attributes directly, for example @str instead of @attributes.str.value. Disable this setting if you need the ability to reference the full attribute model, for example @attributes.str.label.",
@@ -2102,6 +2104,7 @@
         },
         "StarshipRoles": {
             "Captain": "Captain",
+            "Engineer": "Engineer",
             "Engineers": "Engineers",
             "Gunners": "Gunners",
             "Passengers": "Passengers",
@@ -2963,6 +2966,12 @@
 },
 
 "d100A": {
+    "phaseType":{
+
+"movement":"Piloting",
+"normal":"Normal"}
+,
+
 "PsionBroadSkills" :{
     "con": {
         "tooltip":"This skill can't be used untrained. This skill allows a character to harness the power of his mind lo enhance his body's functions. With just the broad skill, a character can attempt to use any of the related specialty skills except those that can't be used untrained. The difficulty oJ such an action is reflected in the increased psionic energy cost and the higher base situation die for using just the broad skill.",
