--- a/lang/en.json
+++ b/lang/en.json
@@ -1200,6 +1200,7 @@
             "Details": "Hybrid Item Details"
         },
         "Identified": "Identified",
+        "IsSkilled": "Uses Skill",
         "Magic": {
             "Details": "Magic Item Details"
         },
@@ -3224,7 +3225,8 @@
 "actionattack":"ATK",
 "actiondamage":"DMG",
 "actionheal":"HEAL",
-
+"actionscan":"SCAN",
+"actionSkillUse":"USE",
 
 "skill" : "Skill",
 
