--- a/lang/en.json
+++ b/lang/en.json
@@ -68,6 +68,7 @@
     "profession": "Profession",
     "clothing": "Clothing and Accessories",
     "communications": "Communication",
+    "communication": "Communication",
     "computer": "Computer",
     "pharmaceutical": "Pharmaceutical",
     "container": "Container",
