--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,5 @@
 {
+    "Alternityd100":{"d100AActorSheetCharacter": "Standard Sheet"},
 
 "pisto":"Modern Ranged Weapon - Pistol",
 "primary":"Primary",
