--- a/lang/en.json
+++ b/lang/en.json
@@ -2974,6 +2974,17 @@
 },
 
 "d100A": {
+"attributes": {
+    "str" : "Strength",
+    "dex" : "Dexterity",
+    "con" : "Constitution",
+    "int" : "Intelligence",
+    "wil" : "Willpower",
+    "per" : "Personality"
+},
+
+
+
     "phaseType":{
 
 "movement":"Piloting",
@@ -3029,6 +3040,176 @@
 
 
     },
+
+"SkillDescriptions":{
+"armorop" : "<p style='font-size: small;' > Armor that's bulky, heavy, and cumbersome hinders the character using it. This is reflected by a penalty la the character s action check and the lessening or negating of a character s Dexterity resistance modifier. The Armor Operation broad skill and its specially skills help to alleviate these penalties. Table P41: ARMOR an page ESB in Chapter Jl: Weapons & Armor lists the various types of armor available and indicates which ones require the user to take an action check and Dexterity resistance modifier penalty, Under the Skill 1 column on that table, an entry of ' means that the Armor Operation skill is not needed to use the armor effectively, and no action check or Dexterity resistance modifier penalty is associated with it. II either Armor Op/ combat/ or 'powered appears under Skill, then the penalty (given in the AP column) does apply, and this skill comes into play. Having just the broad skill allows a hero to reduce the action check and Dexterity resistance modifier penalty of any type of armor by 1 step. An action check penalty can be reduced from +1 to 0, or from +2 to + 1 , and so on— but this benefit never provides a bonus A Dexterity resistance modifier penalty can be similarly offset, perhaps returning the character's resistance modi tier to its original value, A character with the broad skill who is decked out in armor can attempt any actions he wants, though some strenuous physical activities i. jumping, running, climbing, elc,} may require an Armor Operation check. In general, an Ordinary result on this skill check indicates a half effect (run at one-half the normal rate, loi example), while a Good result or better indicates a full effect {run at the normal rale). For a hero untrained in Armor Operation, an action check and Dexterity jesistance modifier penally associated with any type of armor always applies. An untrained hero can't do anything but walk and make simple attacks while using any armor lhal carries an action check and resistance modifier penalty. Simple attacks are just that— no rank benefits, such as the double-strike benefit related to the Melee Weapons specially skills, can be employed by an untrained character who is wearing cumbersome armor. Also, an untrained character can' I use any type of powered armor." ,
+"combaar" : "<p style='font-size: small;' > This specialty skill allows a hero to improve his ability to perform actions, including parrying with a shield, while wearing standard combat armor, by a gradual process of learning to compensate for the weight and awkwardness of the heavy armor. A character wilh this skill at rank I, 2, or 3 is allowed to reduce the action check and Dexterity resistance modifier penalty associated with combat armor (not powered armor) by 1 additional step. Parrying with a Shield; The Armor Operation-combat armor skill applies when a hero tries to parry an Unarmed Attack or Melee Weapons attack. For rules on parrying, see page 69." ,
+"powerar" : "<p style='font-size: small;' > This skill can't be used untrained. This specialty skill allows a hero to improve his proficiency with powered combat armor, becoming able to efficiently employ the strength enhancements built into powered armor. A character with this skill at rank 1, 2, or 3 is allowed to reduce the action check and Dexterity resistance modifier penalty associated with combat armor {not powered armor) by 1 additional step" ,
+"athle" : "<p style='font-size: small;' > Free to human, mechalus, T'sa, and Weren heroes. This broad skill provides a hero with the abilities of a natural athlete — a competent level of strength, grace, and physical prowess. This skill is used to determine the success of physical actions such as climbing a tree, jumping over a large hole, or throwing an abject at a target." ,
+"climb" : "<p style='font-size: small;' > This specialty skill allows a hero to improve this aspect of the Athletics broad skill. With the cJimb skill, a hero can scale walls, ascend mountains, or otherwise climb up or over obstacles. In combat scenes, a hero can climb a certain number of meters in a phase, depending on the result of a skill check: Critical Failure, fall [if possible); Marginal, no progress this action; Ordinary, 1 meter; Good, 2 meters; Amazing, 3 meters. In challenge scenes or whenever the Game master determines that a time unit other than rounds applies, a climb check is a complex skill check (see Table Pi 7, page 62). If a hero gets a Critical Failure on a climb check, he loses his grip and falls (unless equipment prevents it), II he has any actions left in the round, he can attempt to regain his hold by getting an Ordinary success or better ana second cbmb check with a + 1 penally on top o! any other modifiers that apply- If this attempt tails or if the hero has no remaining actions, he falls. Damage from the fall (see Table PIS; IMPACT Damage on page 58 in Chapter 3: Heroes in Action) is lessened if the hero makes □ successful untrained Dexterity check or an Acrobatics-fab skill check' see Lhe description of Acrobatics /a/1 lor more information" ,
+"jump" : "<p style='font-size: small;' > In combat scenes, a hero can jump a certain number of meters depending on the result of a skill check. There are three types of jumps: standing jump, running jump, and vertical leap. On any jumping attempt, a Cri I iced Failure result indicates that the hem trips and takes a hard tall, suffering d6 points of stun damage. A Marginal result indicates that the hero makes a leap of Ordinary distance (see below) but suffers d4 points of stun damage because of □ poor landing. On a standing jump attempt, an Ordinary success means a leap ol 1 meter; Good, 2 meters; and Amazing, 3 meters. A standing jump is performed from a stationary starling position. On a running jump attempt, an Ordinary success means a leap of 2 meters; Good, 4 meters; and Amazing, 6 meters. A running jump requires at least 4 meters of space far a running start before making the jump. On n vertical leap attempt, an Ordinary success means a leap of 1 meter; Good, 1.5 meters; and Amazing, 2 meters. A vertical leap is made irom a standing position; the distances indicate how far above his head a character can leap and reach, Afofe; In an environment where the gravity is weaker or stronger than Earth normal, the distance figures for a jump should be adjusted accordingly. As a rough guideline, double the given distances in light gravity and reduce them in heavy gravity: For Earth normal x2, take one-half of the given distances; lor Earth normal x3, use one-third; and so forth .increased Distance: As a hero increases his ranks in this specialty skill, the distance that he can jump or leap also increases. The running jump improves by I meter at ranks 3, 6, 9, and 12; the standing jump improves by I meter at ranks 4, 7. and 10; and the vertical leap improves by 0.5 meters at ranks 5, 8, and 11" ,
+"throw" : "<p style='font-size: small;' > This skill" ,
+"throwspec" : "<p style='font-size: small;' > This skill" ,
+"heavywe" : "<p style='font-size: small;' > This skill" ,
+"direcfi" : "<p style='font-size: small;' > This skill" ,
+"indirfi" : "This skill" ,
+"meleewe" : "This skill" ,
+"blade" : "This skill" ,
+"bludg" : "This skill" ,
+"powerwe" : "This skill" ,
+"unarmat" : "This skill" ,
+"brawl" : "This skill" ,
+"powerma" : "This skill" ,
+"acrob" : "This skill" ,
+"dared" : "This skill" ,
+"defenma" : "This skill" ,
+"dodge" : "This skill" ,
+"fall" : "This skill" ,
+"fligh" : "This skill" ,
+"zerogtr" : "This skill" ,
+"zerospec" : "This skill" ,
+"manip" : "This skill" ,
+"lockp" : "This skill" ,
+"pickp" : "This skill" ,
+"prest" : "This skill" ,
+"moderra" : "This skill" ,
+"pisto" : "This skill" ,
+"rifle" : "This skill" ,
+"smg" : "This skill" ,
+"primira" : "This skill" ,
+"bow" : "This skill" ,
+"cross" : "This skill" ,
+"flint" : "This skill" ,
+"sling" : "This skill" ,
+"steal" : "This skill" ,
+"hide" : "This skill" ,
+"shado" : "This skill" ,
+"sneak" : "This skill" ,
+"vehicop" : "This skill" ,
+"airve" : "This skill" ,
+"land ve" : "This skill" ,
+"spaceve" : "This skill" ,
+"waterve" : "This skill" ,
+"movem" : "This skill" ,
+"race" : "This skill" ,
+"swim" : "This skill" ,
+"trail" : "This skill" ,
+"stami" : "This skill" ,
+"endur" : "This skill" ,
+"resispa" : "This skill" ,
+"survi" : "This skill" ,
+"survitr" : "This skill" ,
+"busin" : "This skill" ,
+"corpo" : "This skill" ,
+"illicbu" : "This skill" ,
+"smallbu" : "This skill" ,
+"compusc" : "This skill" ,
+"hacki" : "This skill" ,
+"hardw" : "This skill" ,
+"progr" : "This skill" ,
+"demol" : "This skill" ,
+"disar" : "This skill" ,
+"scrat" : "This skill" ,
+"setexp" : "This skill" ,
+"knowl" : "This skill" ,
+"compuop" : "This skill" ,
+"deduc" : "This skill" ,
+"firstai" : "<p style='font-size: small;' > This specialty skill represents basic training in first aid techniques, including the use of trauma packs, first aid kits, and other general-use medical items. It doesn't provide a hero with the ability to use a medical gauntlet or surgical tools, for instance (See Chapter 9: Gooch & Services for brief descriptions of medical gear.) Situation die modifiers that can have an effect on a first aid skill check are given in the Medical Science Situation Moditiers sidebar on page 84. Note, however, that a hero can't use first aid on a member of an alien species unless the hero has the appropriate Medical Science -xenomedicine skill. {See page 86 for details.) The first aid skill can be used lo accomplish the tallowing tasks: Heal Stun Damage: A character can use first aid to remove stun damage from himself or someone else. A successful skill check restores 2, 3, or 4 stun points depending on the degree of success (Ordinary, Good, or Amazing). This application of the skill only works on someone who is conscious. <br>Knockout Recovery: A knockout, in game terms, occurs when a character's stun points are used up. A successful skill check brings a character back to consciousness and recovers 1, 2, or 3 stun points, depending on the degree of success. Heal Wound Damage: The first aid ski II can be used to heal wounds, both in combat scenes and in noncombat situations. Healing in a combat scene lakes place during action rounds, while fighting or some other dramatic situation is unfolding. When first aid is used tor healing wounds, the hero must be using either a first aid kit or a trauma pack, and a complex skill check (see page 62) is required. The task is one of Good complexity with a first aid kit, or Ordinary if a trauma pack is used. On a Critical Failure, the patient suffers 1 wound instead of having any wounds healed, and the complex skill check is immediately ruined. When the complex skill check is completed, 1 wound is healed if the skill was used with a first aid kill, and 2 wounds are healed if a trauma pack was used* This application of the first aid skill can be used on a certain character once to heal previously inflicted wounds. Any wounds I hat remain after first aid has been applied can only be healed naturally or by the use of the Medical Science-surgery specialty skill. New wounds that occur thereafter can be treated, bul no additional application of first aid will then I remaining wounds Irom earlier damage results. ► Dying: A character with any amount of mortal damage is considered to be dying. A hero who uses either a first aid kit or a trauma pack and makes a successful first aid skill check can stabilize mortal damage, thus removing the need for the character to make a Stamina -endurance check at the end of the current scene Note, however, that first aid does not heal mortal damage — Medical Science-surgery is necessary to restore a dying character to health. Improved First Aid: As a character achieves higher skill ranks, lie becomes more proficient at providing aid to injured patients. This is reflected by a reduction in situation die penalties: 1 step ol reduction at rank 4, 2 steps at rank 8, and 3 steps at rank !£. This benefit only reduces a penalty; it never provides a bonus" ,
+"speakl" : "This skill" ,
+"speclan" : "This skill" ,
+"law" : "This skill" ,
+"courtpr" : "This skill" ,
+"lawen" : "This skill" ,
+"lawspec" : "This skill" ,
+"lifesc" : "This skill" ,
+"biolo" : "This skill" ,
+"botan" : "This skill" ,
+"genet" : "This skill" ,
+"xenol" : "This skill" ,
+"zoolo" : "This skill" ,
+"medicsc" : "<p style='font-size: small;' > This skill provides a hero with the training needed to perform certain medical procedures, including the ability to diagnose common ail meats, diseases, and wounds. Skill checks made to determine if a character knows a certain piece of medical information, or if he's able to research a question and discover an answer, are made the same way as Knowledge skill checks; see the description of that skill on page 81 for details. A hero with just the Medical Science broad skill can't treat characters who have suffered damage, however, The treatment specialty skill is necessary to heal stun or wound damage, and reducing a patient's mortal damage requires the surgery specialty skill." ,
+"foren" : "This skill" ,
+"medickn" : "This skill" ,
+"psych" : "This skill" ,
+"surge" : "This skill" ,
+"treat" : "This skill" ,
+"xenom" : "This skill" ,
+"navig" : "This skill" ,
+"driveas" : "This skill" ,
+"surfa" : "This skill" ,
+"systeas" : "This skill" ,
+"physisc" : "This skill" ,
+"astro" : "This skill" ,
+"chemi" : "This skill" ,
+"physi" : "This skill" ,
+"plane" : "This skill" ,
+"secur" : "This skill" ,
+"protepr" : "This skill" ,
+"securde" : "This skill" ,
+"systeop" : "This skill" ,
+"commu" : "This skill" ,
+"defen" : "This skill" ,
+"engin" : "This skill" ,
+"senso" : "This skill" ,
+"weapo" : "This skill" ,
+"tacti" : "This skill" ,
+"infan" : "This skill" ,
+"space" : "This skill" ,
+"vehic" : "This skill" ,
+"technsc" : "This skill" ,
+"inven" : "This skill" ,
+"juryr" : "This skill" ,
+"repai" : "This skill" ,
+"technkn" : "This skill" ,
+"admin" : "This skill" ,
+"burea" : "This skill" ,
+"manag" : "This skill" ,
+"animaha" : "This skill" ,
+"animari" : "This skill" ,
+"animatr" : "This skill" ,
+"aware" : "This skill" ,
+"intui" : "This skill" ,
+"perce" : "This skill" ,
+"creat" : "This skill" ,
+"spec2" : "This skill" ,
+"inves" : "This skill" ,
+"interro" : "This skill" ,
+"searc" : "This skill" ,
+"track" : "This skill" ,
+"resol" : "This skill" ,
+"mentare" : "This skill" ,
+"physire" : "This skill" ,
+"streesm" : "This skill" ,
+"crimiel" : "This skill" ,
+"streekn" : "This skill" ,
+"teach" : "This skill" ,
+"spec1" : "This skill" ,
+"cultu" : "This skill" ,
+"diplo" : "This skill" ,
+"etiqu" : "This skill" ,
+"firsten" : "This skill" ,
+"decep" : "This skill" ,
+"bluff" : "This skill" ,
+"bribe" : "This skill" ,
+"gambl" : "This skill" ,
+"enter" : "This skill" ,
+"act" : "This skill" ,
+"dance" : "This skill" ,
+"musicin" : "This skill" ,
+"sing" : "This skill" ,
+"interact" : "This skill" ,
+"barga" : "This skill" ,
+"charm" : "This skill" ,
+"interv" : "This skill" ,
+"intim" : "This skill" ,
+"seduc" : "This skill" ,
+"taunt" : "This skill" ,
+"leade" : "This skill" ,
+"comma" : "This skill" ,
+"inspi" : "This skill" 
+
+},
+
 
 
 
